# Orion-Assistant

./: .gitignore  README.md  bot.py  bot_runner.py  cloudbuild.yaml  config.py  main.py  pyproject.toml  render.yaml  requirements.txt  run_email_test.py  sandbox.py  tree.md
clients/: gemini_client.py  nylas_client.py
custom_types/: message_types.py
src/: agent.py
src/agents/: ai_conversation_manager.py  conversation_manager.py  orchestrator.py
src/clients/: daily.py  gemini.py  nylas.py
src/models/: agent_tools.py  conversation_state.py  email_models.py  intent_models.py
src/services/: agent_tools.py  email_service.py  intent_recognition.py
src/voice/: voice_interface.py
tests/: test_agent.py
tests/integration/: test_client_integrations.py
