[project]
name = "orion-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.28.0",
    "instructor>=1.10.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "loguru>=0.7.3",
    "nylas>=6.10.0",
    "pytest>=8.4.1",
]
