[project]
name = "orion-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.28.0",
    "instructor>=1.10.0",
    "jsonref>=1.1.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "loguru>=0.7.3",
    "nylas>=6.10.0",
    "pydantic>=2.11.7",
]
